# eve-bpc-pricer

./: .gitignore  README.md  bpc.sh  main.py  pyproject.toml  requirements.txt  test_everef_client.py
eve_bpc_pricer/: cli.py
src/: __init__.py
src/api/: adam4eve_historical_client.py  everef_contract_snapshot.py
src/models/: bpc.py
src/parsers/: csv_parser.py
src/valuators/: __init__.py  bpc_valuator.py
