[project]
name = "eve-bpc-pricer"
version = "0.1.0"
description = "EVE Online Blueprint Copy valuation tool"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
  "requests>=2.31.0",
  "typing-extensions>=4.0.0",
  "dataclasses-json>=0.6.0",
  "python-dotenv>=1.0.0",
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=4.9.0",
  "duckdb>=0.9.2",
]

[project.scripts]
eve-bpc-pricer = "eve_bpc_pricer.cli:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
